# familly-companion

./: .env.example  .gitignore  Dockerfile  GEMINI.md  Makefile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish-docker-image.yml
alembic/: env.py
alembic/versions/: 5b14f6bc5356_initial_migration.py  729ee9ff6ad6_create_users_table.py  96cae0505b04_add_google_id_and_profile_picture_to_.py  df607578f7ed_update_task_model_for_family_assignment.py
src/: main.py
src/api/: auth_routes.py  caster.py  member_details.py  statistics.py  user_routes.py  web_routes.py
src/core/: config.py  models.py  schemas.py  services.py
src/data/: database.py  statistics.py
src/web/static/css/: style.css
src/web/static/js/: dashboard.js  hero_details.js  members.js  quests_rewards.js  statistics.js
src/web/templates/: _dashboard_content.html  _hero_details_content.html  _statistiques_content.html  base.html  caster.html  dashboard.html  hero_details.html  index.html  members.html  quests_rewards.html  register.html  slideshow.html  statistiques.html
tests/: conftest.py  test_api.py  test_member_details.py  test_statistics.py
