[project]
name = "heros-du-foyer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
    "httpx>=0.27.0", # Explicitly added for uvicorn[standard] compatibility
    "Authlib>=1.3.0",
    "python-dotenv>=1.0.0",
    "itsdangerous>=2.1.2",
    "pytest>=8.2.2",
    "ruff>=0.5.5",
    "mypy>=1.10.1",
    "pychromecast>=12.2.0",
]
